EXTRA_DIST = \
AUTHORS \
GITGUIDE \
INSTALL \
NEWS \
README \
TODO \
INSTALL.PF_RING \
INSTALL.WINDOWS \
\
Basic_Setup.txt \
CentOS5.txt \
CentOS_56_Installation.txt \
Debian_Installation.txt \
Fedora_Core.txt \
FreeBSD_8.txt \
HTP_library_installation.txt \
Installation_from_GIT_with_PF_RING_on_Ubuntu_server_1104.txt \
Installation_with_CUDA_on_Ubuntu_server_1104.txt \
Installation_with_CUDA_and_PFRING_on_Scientific_Linux_6.txt \
Installation_with_PF_RING.txt \
Installation_with_CUDA_and_PF_RING_on_Ubuntu_server_1104.txt \
Installation_from_GIT_with_PCRE-JIT.txt \
Installation_with_CUDA_on_Scientific_Linux_6.txt \
Mac_OS_X_106x.txt \
OpenBSD_Installation_from_GIT.txt \
Setting_up_IPSinline_for_Linux.txt \
Third_Party_Installation_Guides.txt \
Ubuntu_Installation.txt \
Ubuntu_Installation_from_GIT.txt \
Windows.txt

datarootdir=@datarootdir@
docdir = ${datarootdir}/doc/${PACKAGE}
dist_doc_DATA = ${EXTRA_DIST}
