SUBDIRS = userguide

EXTRA_DIST = \
AUTHORS \
GITGUIDE \
INSTALL \
NEWS \
README \
TODO \
INSTALL.PF_RING \
INSTALL.WINDOWS \
\
Basic_Setup.txt \
Setting_up_IPSinline_for_Linux.txt \
Third_Party_Installation_Guides.txt

datarootdir=@datarootdir@
docdir = ${datarootdir}/doc/${PACKAGE}
dist_doc_DATA = ${EXTRA_DIST}
