ruledir = $(datadir)/suricata/rules

dist_rule_DATA = \
app-layer-events.rules \
decoder-events.rules \
dhcp-events.rules \
dnp3-events.rules \
dns-events.rules \
files.rules \
http-events.rules \
http2-events.rules \
ipsec-events.rules \
kerberos-events.rules \
modbus-events.rules \
mqtt-events.rules \
nfs-events.rules \
ntp-events.rules \
quic-events.rules \
smb-events.rules \
smtp-events.rules \
ssh-events.rules \
stream-events.rules \
tls-events.rules
