ruledir = $(datadir)/suricata/rules

dist_rule_DATA = \
app-layer-events.rules \
decoder-events.rules \
dhcp-events.rules \
dnp3-events.rules \
dns-events.rules \
enip-events.rules \
files.rules \
ftp-events.rules \
http-events.rules \
http2-events.rules \
ipsec-events.rules \
kerberos-events.rules \
mdns-events.rules \
modbus-events.rules \
mqtt-events.rules \
nfs-events.rules \
ntp-events.rules \
pgsql-events.rules \
pop3-events.rules \
quic-events.rules \
rfb-events.rules \
smb-events.rules \
smtp-events.rules \
ssh-events.rules \
stream-events.rules \
tls-events.rules \
websocket-events.rules
